# ToolBox

./: .dockerignore  .env.develop  .env.example  .env.product  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
docs/: COMMIT_CONVENTION.md  DEPLOYMENT.md  TAURI.md
scripts/: commit-msg  install-hooks.sh  nginx.toolbox.conf.example
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/toolbox/: api.py  cli.py  router.py
src/toolbox/core/: detect.py  engines_graph.py  errors.py  limits.py  llm_settings.py  pipeline.py  providers.py  settings_api.py
src/toolbox/engines/: base.py  docling.py  libreoffice.py  markitdown.py  opendataloader.py  pandoc.py  pillow.py  vision_llm.py
src/toolbox/tools/file_convert/: router.py
src/toolbox/tools/image_inpaint/: router.py
