[project]
name = "toolbox"
version = "0.1.0"
description = "Toolbox — 工具百宝箱：开发者常用小工具集合 + 文件格式转换"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "markitdown[all]>=0.1.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.15",
    "rich>=13",
    "python-multipart>=0.0.20",
    "docling>=2.102.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
toolbox = "toolbox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolbox"]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
