[project]
name = "toolbox"
version = "0.1.0"
description = "Toolbox — 工具百宝箱：开发者常用小工具集合 + 文件格式转换"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "markitdown[all]>=0.1.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.15",
    "rich>=13",
    "python-multipart>=0.0.20",
    "docling>=2.102.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
# opendataloader-pdf 引擎需要 JVM（Java 11+）。本地不想装 JDK 的话别勾，
# 引擎自动跳过；商用 Docker 镜像里默认装上拿 benchmark 第一档精度。
#   uv sync --extra pdf-pro
pdf-pro = ["opendataloader-pdf>=2.0"]

[project.scripts]
toolbox = "toolbox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolbox"]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
